--- a/blog .html
+++ b/blog .html
@@ -16,8 +16,18 @@
        <h5 class="text-white">1. What is the difference of Localstorage and Sessionstorage ?</h5>
        <p class="text-white">ANS: SessionStorage is similar to localStorage. The difference is that while data in  localStorage doesn't expire, data in sessionStorage is cleared when the page session ends. For most cases, we use the local Storage object if we want some data to be on the browser. If we want it on the server, then we use cookies, and the session storage is used when we want to destroy the data whenever that specific tab gets closed or the season is closed by the user.</p>
        <br>
-       <h5></h5>
+       <h5 class="text-white">2. What is the difference between Global scope and Blog scope ?</h5>
+       <p class="text-white">ANS: A global variable has global scope. A global variable is accessible from anywhere in the code. And the Local scope contains things defined inside code blocks. A local variable has local scope.</p>
+       <br>
+       <h5 class="text-white">3. How does javascript event loop work ?</h5>
+       <p class="text-white">ANS: The Event Loop has one simple job to monitor the Call Stack and the Callback Queue. If the Call Stack is empty, the Event Loop will take the first event from the queue and will push it to the Call Stack, which effectively runs it. Such an iteration is called a tick in the Event Loop.</p>
+       <br>
+       <h5 class="text-white">4. How to undefined variable in javascript ?</h5>
+       <p class="text-white">ANS: In JavaScript if a variable has been declared, but has not been assigned a value, is automatically assigned the value undefined . Therefore, if you try to display the value of such variable, the word "undefined" will be displayed.</p>
     </main>
+    <footer class="mt-5">
+        <p class="text-white text-center">All copyright credit by Sabbir Howlader</p>
+    </footer>
     
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.1/dist/js/bootstrap.bundle.min.js
     "></script>
